Terraform/nat.tf
# Cloud Router
resource "google_compute_router" "router" {
  name    = "registration-router"
  region  = var.region
  network = google_compute_network.registration_vpc.id
}

# Cloud NAT
resource "google_compute_router_nat" "nat" {
  name   = "registration-nat"
  router = google_compute_router.router.name
  region = var.region

  nat_ip_allocate_option = "AUTO_ONLY"

  source_subnetwork_ip_ranges_to_nat = "ALL_SUBNETWORKS_ALL_IP_RANGES"
}
