Terraform/network.tf
resource "google_compute_network" "registration_vpc" {
  name                    = "registration-vpc"
  auto_create_subnetworks = false
}
resource "google_compute_subnetwork" "public_subnet" {
  name          = "public-subnet"
  ip_cidr_range = "10.0.1.0/24"
  region        = var.region
  network       = google_compute_network.registration_vpc.id
}
resource "google_compute_subnetwork" "private_subnet" {
  name          = "private-subnet"
  ip_cidr_range = "10.0.2.0/24"
  region        = var.region
  network       = google_compute_network.registration_vpc.id
}
